# rustlib_webapp

./: Cargo.toml
examples/: simple.rs
examples/webroot/: index.html
src/: handler.rs  lib.rs  routing.rs  server.rs
